docs: plan functional test suite simplification